# honestbot-backend

./: README.md  Tasks.md  agent.py  call_agent.py  chunker.py  constants.py  embedding.py  ingestion.py  logger.py  main.py  prompts.py  pyproject.toml  schema.py  setup.py  tools.py  utility.py
knowledge_base/: AuraGear_Knowledge_Base.md
test/: AuraGear_Test_Cases.json  testing.py  testing_uti.py
