[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.6.1",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.16.1",
    "openinference-instrumentation-openai-agents>=1.4.3",
    "pinecone>=9.0.0",
    "redis>=7.4.0",
    "uvicorn>=0.46.0",
]
